# OPAL

./: CHANGELOG.md  OPAL_manual.md  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
migrations/versions/: 0c42f39a04cc_add_redline_columns_to_step_execution.py  a310ab9da1d8_add_kind_column_to_attachment.py  bb285af00e88_add_step_dependency_table_for_operation_.py  eb217417d6d2_add_procedure_id_to_attachment_for_.py
src/opal/: __init__.py  __main__.py  config.py  launcher.py  seed.py  updater.py
src/opal/api/: app.py  middleware.py
src/opal/api/routes/: __init__.py  attachments.py  bom.py  datasets.py  events.py  execution.py  inventory.py  issues.py  onshape.py  parts.py  procedures.py  project.py  purchases.py  reports.py  requirements.py  risks.py  search.py  suppliers.py  undo.py  users.py  welcome.py  workcenters.py
src/opal/core/: audit.py  designators.py  diff.py  events.py  genealogy.py  inventory.py
src/opal/db/: __init__.py  base.py  session.py
src/opal/db/models/: __init__.py  attachment.py  audit.py  dataset.py  execution.py  genealogy.py  inventory.py  issue.py  onshape_link.py  part.py  procedure.py  purchase.py  reference.py  risk.py  user.py
src/opal/integrations/onshape/: client.py  polling.py  sync.py
src/opal/mcp/: server.py
src/opal/tui/: api_client.py
src/opal/tui/screens/: audit.py  executions.py  inventory.py  issues.py  procedures.py  purchases.py  risks.py  search.py  settings.py  suppliers.py  (+1 more)
src/opal/web/: routes.py
tests/unit/: test_execution.py  test_procedures.py
(+35 files in other folders)
