[project]
name = "opal"
version = "1.2.3"
description = "Operations, Procedures, Assets, Logistics - ERP for small teams and hardware projects"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "OPAL Team" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.17",
    "aiofiles>=24.1.0",
    "httpx>=0.28.0",
    "segno>=1.6.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]
tui = [
    "textual>=0.89.0",
]
app = [
    "textual>=0.89.0",
    "pyinstaller>=6.0",
]
e2e = [
    "playwright>=1.49.0",
]

[project.scripts]
opal = "opal.__main__:main"
opal-app = "opal.launcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opal"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "F821", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/opal --cov-report=term-missing"

[tool.coverage.run]
source = ["src/opal"]
omit = ["src/opal/tui/*"]
